services/be/k8s/loginsvc.yaml
apiVersion: v1
kind: Service
metadata:
  name: login-service
  namespace: dev
spec:
  selector:
    app: login
  ports:
  - port: 80
    targetPort: 5112
  type: ClusterIP
