services/be/k8s/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: dev
spec:
  selector:
    app: backend
  ports:
  - port: 80
    targetPort: 5112
  type: ClusterIP
